Reetan.Nayak Dev 25/force-app/main/default/objects/How_To__kav/fields/Additional_Resources__c.field-meta.xml
<CustomField>
    <fullName>Additional_Resources__c</fullName>
    <label>Additional Resources</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>