Reetan.Nayak Dev 25/force-app/main/default/objects/How_To__kav/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <label>Procedure</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>