Reetan.Nayak Dev 25/force-app/main/default/objects/How_To__kav/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>TextArea</type>
</CustomField>